alignment issue fixed in updates see more section

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -395,7 +395,7 @@ body{
 }
 
 .darker {
-	
+	background: #c9e5ef;
 	padding: 60px 0;
 	
 }
